# rrtstar-kinematic-6DOF

./: .gitignore  CMakeLists.txt  README.md  codefile.txt  lineAABBIntersection.py  output_data.txt  path_data.csv  plot_csvfile.py  plot_exportedData.py  test3d.cpp  testWithoutSpline.txt
data/: intrinsic_calibrated.yaml  output.txt  robot_poses.yaml
include/: collision_detection.h  fineTuenOrientation.h  forward_kinematics.h  hand_eye_calibration.h  ik_solution_evaluator.h  inverse_kinematics.h  ivk.h  matplotlibcpp.h  obstacle.h  path_export.h  path_optimization.h  path_planning.h  path_return.h  robot_kinematics.h  rrtstar.h  rrtstar_exeptions.h  rrtstar_logger.h  rrtstar_main.h  rrtstar_timeout.h  rrtstarmodified.h  spline.h  tree_management.h  workspace_limits.h
src/: collision_detection.cpp  fk_test_standalone.cpp  forward_kinematics.cpp  hand_eye_calibration.cpp  ik_solution_evaluator.cpp  ik_solution_evaluator_test.cpp  inverse_kinematics.cpp  ivk.cpp  kinematics_test.cpp  main.cpp  obstacle.cpp  path_export.cpp  path_optimization.cpp  path_planning.cpp  path_return.cpp  robot_kinematics.cpp  rrt_star_6dof.cpp  rrtstar.cpp  rrtstar_main.cpp  rrtstarmodified.cpp  spline.cpp  test_hand_eye_calibration.cpp  test_rrtstar.cpp  test_rrtstarmodified.cpp  test_rrtstarmodifiedsp.cpp  tree_management.cpp
